--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
          run:
            npm install
        - name: build
+         env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          run:
            npm run build-w && npm run build-wz
        - name: upload
